crates/leaf-macros/tests/ui/generic_bean_factory_is_a_hard_error.rs
//! A generic `#[bean]` factory must hard-error: a generic factory has no single
//! concrete product type, so it cannot mint a const row.

use leaf_macros::bean;

struct Wrap<T> {
    inner: T,
}

#[bean]
fn make<T: Default>() -> Wrap<T> {
    Wrap { inner: T::default() }
}

fn main() {}
